src/abacus/src/commerce/dal/snapshots/server__commerce__dal__tests__search_products_fulltext_test.snap
---
source: server/src/commerce/dal/tests.rs
expression: searched_products
---
[
    Some(
        Product {
            name: "Product name in english",
            description: None,
            images: [],
            unit_label: "piece",
            is_published: false,
            visibility: [],
            price: ProductPrice {
                unit_amount: 0,
                unit_amount_currency: MXN,
            },
            translations: [
                ProductMultilingualTranslations {
                    locale: EnUS,
                    name: "Product name in english",
                    description: None,
                },
            ],
        },
    ),
]
